Add draft for chapter 1

--- a/Report/dissertation.tex
+++ b/Report/dissertation.tex
@@ -19,6 +19,7 @@
 
 % you will end up with dissertation.pdf 
 \usepackage{mmp}
+\usepackage{palatino}
 
 % the following packages are used for citations - You only need to include one. 
 %
