--- a/Report/cover.tex
+++ b/Report/cover.tex
@@ -1,5 +1,5 @@
 
-\title{My Little Convnet: Tensors are Magic}
+\title{Image Classification Using Deep Convolutional Neural Networks}
 
 % Your name
 \author{Theodoros Nikopoulos-Exintaris}
