--- a/Report/Appendix2/appendix2.tex
+++ b/Report/Appendix2/appendix2.tex
@@ -1,3 +1,4 @@
 \chapter{Ethics Submission}
+\section{Submission Number 4111}
 
-This appendix includes a copy of the ethics submission for the project. After you have completed your Ethics submission, you will receive a PDF with a summary of the comments. That document should be embedded in this report, either as images, an embedded PDF or as copied text. The content should also include the Ethics Application Number that you receive. 
+\includepdf[pages={-}]{./Appendix2/4111.pdf}
