--- a/Report/dissertation.tex
+++ b/Report/dissertation.tex
@@ -20,6 +20,13 @@
 % you will end up with dissertation.pdf 
 \usepackage{mmp}
 \usepackage{palatino}
+\usepackage{listings}
+\usepackage{color}
+\usepackage{pdfpages}
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
 
 % the following packages are used for citations - You only need to include one. 
 %
