--- a/Report/dissertation.tex
+++ b/Report/dissertation.tex
@@ -20,13 +20,19 @@
 % you will end up with dissertation.pdf 
 \usepackage{mmp}
 \usepackage{palatino}
+
+\usepackage{wrapfig}
+\usepackage{pdfpages}
+\usepackage{graphicx} % Required for including images
+\graphicspath{{figures/}} % Location of the graphics files
+
 \usepackage{listings}
 \usepackage{color}
-\usepackage{pdfpages}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
-
+\lstset{frame=tb,language=Python,aboveskip=3mm,belowskip=3mm,showstringspaces=false,columns=flexible,basicstyle={\small\ttfamily},numbers=none,numberstyle=\tiny\color{gray},keywordstyle=\color{blue},commentstyle=\color{dkgreen},stringstyle=\color{mauve}, breaklines=true,breakatwhitespace=true,tabsize=3}
+\lstset{language=Java}
 
 % the following packages are used for citations - You only need to include one. 
 %
