--- a/Report/References/references.bib
+++ b/Report/References/references.bib
@@ -46,7 +46,7 @@ annote={Site for Google's Tensor Flow machine learning framework}
   year = {2015},
   publisher = {GitHub},
   journal = {GitHub repository},
-  howpublished = {\url{https://github.com/fchollet/keras}}
+  howpublished = {\url{https://github.com/fchollet/keras}},
   note={Accessed March 2016},
   annote={Keras citation as recommended by author.}
 }
