--- a/Report/cover.tex
+++ b/Report/cover.tex
@@ -8,7 +8,7 @@
 \authoremail{thn2@aber.ac.uk}
 
 \degreeschemecode{GG47} %e.g. G400 
-\degreeschemetitle{Computer Science} % e.g. Computer Science
+\degreeschemetitle{Computer Science and Arificial Inteligence} % e.g. Computer Science
 \degreetype{BSc}
 
 \modulecode{CS39440} % i.e. CS39440, CC39440, CS39620
@@ -16,7 +16,7 @@
 
 \date{4th May 2016} % i.e. the date of this version of the report
 
-\status{Draft} % Use draft until you create the release version. Then, change this to Release.
+\status{Release} % Use draft until you create the release version. Then, change this to Release.
 \version{1.0}
 
 %The title and name of your supervisor.
