--- a/Report/cover.tex
+++ b/Report/cover.tex
@@ -20,7 +20,7 @@
 \version{1.0}
 
 %The title and name of your supervisor.
-\supervisor{Dr./Prof. Chuan Lu} 
+\supervisor{Dr. Chuan Lu} 
 
 %The email for your supervisor. 
 \supervisoremail{cul@aber.ac.uk}
