--- a/Report/acknowledgements.tex
+++ b/Report/acknowledgements.tex
@@ -4,7 +4,7 @@
     {\LARGE\bf Acknowledgements}
 \end{center}
 
-I'd like to thank Keiron O' Shea and Prof. Chuan Lu for volunteering to answer questions regarding neural networks and providing useful feedback and bibliography to get started on the topic.
+I'd like to thank Keiron O' Shea and Dr. Chuan Lu for volunteering to answer questions regarding neural networks and providing useful feedback and bibliography to get started on the topic.
 
 The figure of a CNN architecture is taken from:
 http://systemdesign.altera.com/can-you-see-using-convolutional-neural-networks/
