--- a/Report/acknowledgements.tex
+++ b/Report/acknowledgements.tex
@@ -6,5 +6,4 @@
 
 I'd like to thank Keiron O' Shea and Dr. Chuan Lu for volunteering to answer questions regarding neural networks and providing useful feedback and bibliography to get started on the topic.
 
-The figure of a CNN architecture is taken from:
-http://systemdesign.altera.com/can-you-see-using-convolutional-neural-networks/
+We would also like to thank the Aberystwyth University Computer Science, The Bioinfomatics research team, as well as the Machine Learning lecture staff for providing resources and information that enabled us to write this dissertation.
