--- a/Report/dissertation.tex
+++ b/Report/dissertation.tex
@@ -23,6 +23,7 @@
 
 \usepackage{wrapfig}
 \usepackage{pdfpages}
+\usepackage{hyperref}
 \usepackage{graphicx} % Required for including images
 \graphicspath{{figures/}} % Location of the graphics files
 
