--- a/Report/declaration.tex
+++ b/Report/declaration.tex
@@ -20,10 +20,10 @@ I confirm that:
 \end{itemize}
 
 \vspace{2em}
-Name ............................................................ \\
+Name Theodoros Nikopoulos-Exintaris.............................. \\
 
 \vspace{1em}
-Date ............................................................ \\
+Date 04/05/2015.................................................. \\
 
 %%% 
 %%% We would like to make a selection of final reports available to students that take 
@@ -44,7 +44,7 @@ By including my name below, I hereby agree to this dissertation being made avail
 students and academic staff of the Aberystwyth Computer Science Department.  
 
 \vspace{2em}
-Name ............................................................  \\
+Name Theodoros Nikopoulos-Exintaris.............................. \\
 
 \vspace{1em}
-Date ............................................................ \\
+Date 04/05/2015.................................................. \\
