--- a/Report/Appendix3/appendix3.tex
+++ b/Report/Appendix3/appendix3.tex
@@ -2,7 +2,7 @@
 
 \section{Colour Conversion}
 
-This code enables conversion between RGB channel intensities into greyscale luminance using different conversion methods based on their respective colourspace recommendations in a variety of modes.
+This code enables conversion between RGB channel intensities into greyscale luminance using different conversion methods based on their respective colourspace recommendations in a variety of modes. A starting discussion on the effects of different methods can be found \hyperlink{http://cadik.posvete.cz/color_to_gray_evaluation/}{here}
 
 \begin{lstlisting}
 import numpy as np
