--- a/Report/abstract.tex
+++ b/Report/abstract.tex
@@ -4,4 +4,6 @@
     {\LARGE\bf Abstract}
 \end{center}
 
-Include an abstract for your project. This should be no more than 300 words.
+An investigation of the use of Deep Convolutional Neural Networks for image classification using statistical means. This report aims to test the hypothesis that DCNNs are suitable to classify images in a product style environment.
+This report will investigate a number of hyper parameters and their impact in performance, practicality, and training in an attempt to produce a successful classifier that can be reproduced by third party sources.
+Wherever possible our aim is full disclosure of any assumptions and any compromises that have been made to enhance the reproducibility of our results.
