--- a/Report/acknowledgements.tex
+++ b/Report/acknowledgements.tex
@@ -7,3 +7,6 @@
 I'd like to thank Keiron O' Shea and Dr. Chuan Lu for volunteering to answer questions regarding neural networks and providing useful feedback and bibliography to get started on the topic.
 
 We would also like to thank the Aberystwyth University Computer Science, The Bioinfomatics research team, as well as the Machine Learning lecture staff for providing resources and information that enabled us to write this dissertation.
+
+Finally I would like to thank my family for supporting me during my 3 years of this degree as well as providing emergency financing without which this project would be impossible, as well as my mother for providing last minute proofreading for this report.
+
