--- a/Report/Appendix1/appendix1.tex
+++ b/Report/Appendix1/appendix1.tex
@@ -3,4 +3,7 @@
 For this dissertation I have used the following libraries as stated in the design documentation:
 
 \section{Keras}
-Neural network library allowing quick model prototyping.\cite{chollet2015keras}
+Neural network library allowing quick model prototyping.\cite{chollet2015keras} and simplifies some GPU operations which would otherwise have to be implemented.
+
+\section{SciKit Learn}
+Visualisation and statistical tools for machine learning. Can be found here \hyperref{http://scikit-learn.org/stable/}
